Date picker doesn't show in Firefox Ubuntu when field low on page
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox111 | --- | verified |
People
(Reporter: will.r.johnson, Assigned: emilio)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:108.0) Gecko/20100101 Firefox/108.0
Steps to reproduce:
In Ubuntu 22.02 (Wayland) and Firefox 108 (though I believe this issue was introduced in Firefox 106) if the date picker is low on the screen (where there is not enough space below the date field for the picker to display) then it doesn't show at all.
If you go to this page there is a date field with the date (6/1/17) in the box:
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/date
If you click in the date field input when the date field is higher up the screen then the date picker is launched and you can select a date from it.
If you scroll so that the date picker is near the bottom of the screen and click inside the date field input then the date picker does not display.
Actual results:
The date picker does not display.
Expected results:
The date picker should open above the date field input.
![]() |
||
Updated•3 years ago
|
Comment 1•3 years ago
|
||
I was able to reproduce the issue on Ubuntu 20.04 using Firefox build 108.0.1(20221215175817) and Wayland settings. The date picker is not displayed for given example on description. Mark issue as new.
Comment 2•3 years ago
|
||
The severity field is not set for this bug.
:emilio, could you have a look please?
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 3•3 years ago
|
||
This seems specific to Wayland. Martin, not sure if you or someone at RedHat have cycles to work on this? It seems WaylandPopupMoveImpl
is getting called repeatedly for the popup with the same arguments, probably in a way that should be optimized out.
Comment 4•3 years ago
•
|
||
Maybe also a dupe of bug 1808962? [EDIT: I meant bug 1805208.]
Assignee | ||
Comment 5•3 years ago
|
||
Wrong bug? Anyways I took a look and have a patch, will post it when back.
Assignee | ||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
Yup sorry -- copypasted this bug. I meant bug 1805208. Updating comment in-place to clarify. :)
Assignee | ||
Comment 9•3 years ago
|
||
Otherwise we end up in a positioning loop which involves hiding and
showing the popup all the time, which is pretty bad.
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Comment 11•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Comment 12•2 years ago
|
||
I reproduced the issue described in comment 0 using an old Nightly build before the fix, verified that using latest Nightly and Firefox 111.0 RC this is not reproducible anymore, the date picker shows up if the date field is down or up in the page.
I did found a side issue in latest Nightly though and also Nightly 111.0a1 with this fix (Firefox 111.0 RC is unaffected):
- the date field is positioned down in the page
- Click the date field
- picker shows
- Click the date field again
- picker closes and reopens (it should stay closed)
Should I log a new issue or can this be addressed here?
Comment 14•2 years ago
|
||
Closing as verified fixed since the date picker is now displayed using latest Nightly 112.0a1 on Ubuntu 22.04.
(In reply to Emilio Cobos Álvarez (:emilio) from comment #13)
Let's file a new one, thanks.
Filed bug 1821618 for the issue described in comment 12.
Description
•