Bug 1808962 - Always honor move-to-rect positioning requests. r=stransky

Otherwise we end up in a positioning loop which involves hiding and
showing the popup all the time, which is pretty bad.

Differential Revision: https://phabricator.services.mozilla.com/D167608